# LabC-

1Lab/: CMakeCache.txt  CMakeLists.txt  Makefile  TritTest.cpp  cmake_install.cmake  executeTests  makeFIle  source.cpp  start  trit.cpp  trit.h  tritref.cpp  tritref.h  tritset.cpp  tritset.h
2Lab/: ArgsParser.cpp  ArgsParser.h  CMakeCache.txt  CMakeLists.txt  CalcTest.cpp  ExecValue.cpp  ExecValue.h  InputHandler.cpp  InputHandler.h  Instruction.cpp  Instruction.h  InstructionFactory.cpp  InstructionFactory.h  Makefile  StackCalc.cpp  StackCalc.h  cmake_install.cmake  cmdenum.h  executeTests  file.txt  run_time_exceptions.cpp  run_time_exceptions.h  source.cpp
